--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,14 +22,14 @@ services:
     # networks:
     #   - tcp-network
 
-  test-server:
-    build: ./test-server
-    container_name: uwfe_test_tcp_server
-    ports:
-      - "12345:12345"
-    restart: always
-    # networks:
-    #   - tcp-network
+  # test-server:
+  #   build: ./test-server
+  #   container_name: uwfe_test_tcp_server
+  #   ports:
+  #     - "12345:12345"
+  #   restart: always
+  #   # networks:
+  #   #   - tcp-network
 
   influxdb:
     image: influxdb:2-alpine
